test/expressions/diten/uintDecimalOverflow.good
error: uintDecimalOverflow.chpl:1: Integer literal overflow: 18446744073709551616 is too big for type uint64
